<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/slideMenu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/slide_job"
        android:background="@drawable/slide_menu_back2"
       >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@null"
            android:src="@mipmap/slide_1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:textColor="@color/slide_text_color"
            android:text="@string/slide_job"
            android:padding="@dimen/slide_text_margin"
            />
        </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/slide_angle"
        android:background="@drawable/slide_menu_back2"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@null"
            android:src="@mipmap/slide_2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:textColor="@color/slide_text_color"
            android:text="@string/slide_angle"
            android:padding="@dimen/slide_text_margin"
            />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/slide_point"
            android:background="@drawable/slide_menu_back2"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@null"
                android:src="@mipmap/slide_3"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:textColor="@color/slide_text_color"
                android:text="@string/slide_point"
                android:padding="@dimen/slide_text_margin"
                />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/slide_site"
            android:background="@drawable/slide_menu_back2"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@null"
                android:src="@mipmap/slide_4"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:textColor="@color/slide_text_color"
                android:text="@string/slide_site"
                android:padding="@dimen/slide_text_margin"
                />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/slide_config"
            android:background="@drawable/slide_menu_back2"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@null"
                android:src="@mipmap/slide_5"
                />
            <TextView
                android:id="@+id/slide_item_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:textColor="@color/slide_text_color"
                android:text="@string/slide_config"
                android:padding="@dimen/slide_text_margin"
                />
            </LinearLayout>
</LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="0.2"-->
        <!--android:clickable="true"-->
        <!--android:orientation="vertical"-->
        <!--android:padding="@dimen/slide_menu_margin">-->
        <!--<ImageButton-->
            <!--android:id="@+id/slide_angle"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:gravity="center"-->
            <!--android:src="@mipmap/slide_2"-->
            <!--android:background="@null"-->
            <!--/>-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/slide_angle_content"-->
            <!--android:textColor="@color/slide_text_color"-->
            <!--/>-->
    <!--</LinearLayout>-->
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="0.2"-->
        <!--android:clickable="true"-->
        <!--android:orientation="vertical"-->
        <!--android:padding="@dimen/slide_menu_margin">-->
        <!--<ImageButton-->
            <!--android:id="@+id/slide_point"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:gravity="center"-->
            <!--android:src="@mipmap/slide_3"-->
            <!--android:background="@null"-->
            <!--/>-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/slide_point_content"-->
            <!--android:textColor="@color/slide_text_color"-->
            <!--/>-->
    <!--</LinearLayout>-->
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="0.2"-->
        <!--android:clickable="true"-->
        <!--android:orientation="vertical"-->
        <!--android:padding="@dimen/slide_menu_margin">-->
        <!--<ImageButton-->
            <!--android:id="@+id/slide_location"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:gravity="center"-->
            <!--android:src="@mipmap/slide_4"-->
            <!--android:background="@null"-->
            <!--/>-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/slide_location_content"-->
            <!--android:textColor="@color/slide_text_color"-->
            <!--/>-->
    <!--</LinearLayout>-->
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="0.2"-->
        <!--android:clickable="true"-->
        <!--android:orientation="vertical"-->
        <!--android:padding="@dimen/slide_menu_margin">-->
        <!--<ImageButton-->
            <!--android:id="@+id/slide_config"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:gravity="center"-->
            <!--android:src="@mipmap/slide_5"-->
            <!--android:background="@null"-->
            <!--/>-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/slide_config_content"-->
            <!--android:textColor="@color/slide_text_color"-->
            <!--/>-->
    <!--</LinearLayout>-->
<!--</LinearLayout>-->